Fix status whitespace

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -36,7 +36,7 @@ main {
   display: none;
 }
 
-.status {
+#status {
   margin-top: 1em;
 }
 
